<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="34dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="3dp"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/myCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cart"
                    android:textAlignment="center"
                    android:textColor="#f26419"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/orderSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/order_summary"
                android:textColor="#272932"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:padding="12dp">

                <TextView
                    android:id="@+id/mySubtotal"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subtotalVal"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtotalValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/mySubtotal" />

                <TextView
                    android:id="@+id/myDelivery"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/delivery"
                    app:layout_constraintStart_toStartOf="@+id/mySubtotal"
                    app:layout_constraintTop_toBottomOf="@id/mySubtotal" />

                <TextView
                    android:id="@+id/deliveryVal"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deliveryValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/myDelivery" />

                <TextView
                    android:id="@+id/myTax"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_tax"
                    app:layout_constraintStart_toStartOf="@+id/myDelivery"
                    app:layout_constraintTop_toBottomOf="@id/myDelivery" />

                <TextView
                    android:id="@+id/taxVal"
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taxValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/myTax" />

                <View
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#F26419"
                    app:layout_constraintEnd_toEndOf="@id/taxVal"
                    app:layout_constraintStart_toStartOf="@id/myTax"
                    app:layout_constraintTop_toBottomOf="@id/myTax" />

                <TextView
                    android:id="@+id/myTotal"
                    style="@style/textStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/total"
                    app:layout_constraintStart_toStartOf="@id/myTax"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

                <TextView
                    android:id="@+id/totalVal"
                    style="@style/textStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="$-"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/infoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/information"
                android:textColor="#272932"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:background="@color/white"
                android:padding="8dp">

                <TextView
                    android:id="@+id/deliveryAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/delivery_address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintStart_toStartOf="@+id/deliveryAddress"
                    app:layout_constraintTop_toBottomOf="@+id/deliveryAddress" />

                <TextView
                    android:id="@+id/addValue"
                    style="@style/textStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/oshawa"
                    app:layout_constraintBottom_toBottomOf="@+id/location"
                    app:layout_constraintStart_toEndOf="@+id/location"
                    app:layout_constraintTop_toTopOf="@+id/location"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/addressArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="@+id/addValue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/deliveryAddress" />


                <View
                    android:id="@+id/addressView"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/custom_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/location"
                    app:layout_constraintTop_toBottomOf="@+id/addValue" />

                <TextView
                    android:id="@+id/payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/payment_method"
                    app:layout_constraintStart_toStartOf="@+id/addressView"
                    app:layout_constraintTop_toBottomOf="@+id/addressView" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_credit_card"
                    app:layout_constraintStart_toStartOf="@+id/payment"
                    app:layout_constraintTop_toBottomOf="@+id/payment" />

                <TextView
                    android:id="@+id/cash"
                    style="@style/textStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/cash"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    app:layout_constraintTop_toTopOf="@+id/imageView7"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/paymentArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="@+id/cash"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/payment" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button"
                style="@android:style/Widget.Button"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/custom_button_color"
                android:text="@string/place_order"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>