<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage_Activity"
    android:orientation="vertical"
    android:background="@color/powder">

    <!-- User Points View -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:padding="12dp"
        android:background="@color/carmine">
        <TextView
            android:id="@+id/userPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/powder"
            android:text="@string/points_0" />
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/restaurantCarousel"
        android:layout_gravity="center"
        android:layout_width="400dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp"
            android:text="@string/hello_user" />
        <TextView
            android:id="@+id/subGreeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:text="@string/subgreeting" />
    </LinearLayout>
    <GridLayout
        android:id="@+id/tilesGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurantCarousel"
        android:rowCount="1"
        android:columnCount="3"
        android:padding="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="56dp">

    <!-- Tile 1 - View Nearby Restaurants -->
    <androidx.cardview.widget.CardView
        android:id="@+id/nearby"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:backgroundTint="@color/orange"
        android:layout_columnWeight="1"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/nearby"
                android:padding="10dp"
                android:contentDescription="View Nearby Restaurants"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nearby Restaurants"
                android:textColor="@color/powder"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/recent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/orange"
            app:cardUseCompatPadding="true"
            android:layout_columnWeight="1"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="62dp"
                    android:layout_height="72dp"
                    android:src="@drawable/recent"
                    android:padding="10dp"
                    android:contentDescription="View Nearby Restaurants" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="14dp"
                    android:textColor="@color/powder"
                    android:text="Recent Orders" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/orange"
            app:cardUseCompatPadding="true"
            android:layout_columnWeight="1"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/cart"
                    android:padding="10dp"
                    android:contentDescription="View Nearby Restaurants" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shopping Cart"
                    android:textColor="@color/powder"
                    android:paddingBottom="14dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/favourites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            android:backgroundTint="@color/orange"
            android:layout_columnWeight="1"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/favourites"
                    android:padding="10dp"
                    android:contentDescription="View Nearby Restaurants"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Favourites"
                    android:textColor="@color/powder"
                    android:paddingBottom="14dp"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/points"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/orange"
            app:cardUseCompatPadding="true"
            android:layout_columnWeight="1"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/points"
                    android:contentDescription="View Nearby Restaurants" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="14dp"
                    android:textColor="@color/powder"
                    android:text="Points" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/orange"
            app:cardUseCompatPadding="true"
            android:layout_columnWeight="1"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/account"
                    android:padding="10dp"
                    android:contentDescription="View Nearby Restaurants" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Account"
                    android:gravity="center"
                    android:textColor="@color/powder"
                    android:paddingBottom="14dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>

